# mybriefcase-bookmarks-android

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .mcp.json  AGENTS.md  CONTEXT.md  README.md  SPEC.md  build.gradle.kts  flake.nix  rust-toolchain.toml  settings.gradle.kts
.claude/skills/: validate-local.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: build.gradle.kts  compose-stability.conf  lint-baseline.xml
app/src/androidTest/java/dev/jspade/mybriefcase/bookmarks/: EndToEndTest.kt  ExampleInstrumentedTest.kt  TestRunner.kt
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/java/dev/jspade/mybriefcase/bookmarks/: MainActivity.kt  MyBriefcaseApp.kt  ShareReceiverActivity.kt  SyncWorker.kt
app/src/main/java/dev/jspade/mybriefcase/bookmarks/data/: BookmarkError.kt  BookmarkRepository.kt  BookmarkRepositoryImpl.kt  FaviconFetcher.kt  FaviconFetcherImpl.kt  FaviconSettings.kt
app/src/main/java/dev/jspade/mybriefcase/bookmarks/ui/bookmark/: AddBookmarkDialog.kt  BookmarkDetailSheet.kt  BookmarkFavicon.kt  EditBookmarkDialog.kt  FaviconFetchButton.kt  FaviconFetchState.kt  FaviconHero.kt
app/src/main/java/dev/jspade/mybriefcase/bookmarks/ui/folder/: FolderDialogs.kt  FolderScreen.kt  FolderViewModel.kt
app/src/main/java/dev/jspade/mybriefcase/bookmarks/ui/history/: HistoryScreen.kt  HistoryViewModel.kt
app/src/main/java/dev/jspade/mybriefcase/bookmarks/ui/navigation/: NavHost.kt
app/src/main/java/dev/jspade/mybriefcase/bookmarks/ui/search/: SearchScreen.kt  SearchViewModel.kt
app/src/main/java/uniffi/mybriefcase_bookmarks_ffi/: mybriefcase_bookmarks_ffi.kt
app/src/main/res/drawable/: ic_app_logo.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/dev/jspade/mybriefcase/bookmarks/: ArchitectureTest.kt  BookmarkDtoTest.kt  ClientIdTest.kt  ExampleUnitTest.kt  SyncWorkerTest.kt  TestApp.kt
app/src/test/java/dev/jspade/mybriefcase/bookmarks/data/: BookmarkRepositoryImplTest.kt  FakeBookmarkRepository.kt  FaviconFetcherTest.kt
baselineprofile/: build.gradle.kts
baselineprofile/src/main/java/dev/jspade/mybriefcase/bookmarks/baselineprofile/: BaselineProfileGenerator.kt
config/detekt/: detekt.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nix/: screenshot-image.nix
rust/: Cargo.toml  deny.toml
rust/ffi/: Cargo.toml  build.rs
rust/ffi/src/: avatar.rs  bookmarks.rs  folders.rs  history.rs  import_export.rs  lib.rs  lifecycle.rs  mybriefcase_bookmarks_ffi.udl  read.rs  search.rs  sync.rs
rust/ffi/tests/: integration.rs  prop_cache_consistency.rs
scripts/: check-all.sh  check-android.sh  check-rust.sh
(+34 files in other folders)
