[package]
name = "mybriefcase-bookmarks-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "mybriefcase_bookmarks_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/bindgen.rs"

[dependencies]
uniffi = { version = "0.28", features = ["cli", "bindgen"] }
mybriefcase-bookmarks-core = { git = "https://github.com/johnspade/mybriefcase-bookmarks", rev = "52684ad" } # v1.11.0
automerge_repo = { version = "0.3", features = ["tokio"] }
autosurgeon = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
automerge = "0.7"
automerge_repo = { version = "0.3", features = ["tokio"] }
mybriefcase-bookmarks-core = { git = "https://github.com/johnspade/mybriefcase-bookmarks", rev = "52684ad" } # v1.11.0
proptest = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
